--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,31 @@
-/*цвет основного текста #212121*/
-
-/*вторичный цвет rgba(117, 117, 117, 1)*/
-
-/*акцент #2196F3*/
-
-/*белый цвет #FFFFFF*/
-
-/*вторичный цвет фона #F5F5F5*/
-
-
-/*:root {
-    --primary-text-color: #212121;
-    --title-text-color: ;
-    --accent-color: ;   
-}
-*/
-
 
 .body {
    background-color: #fff; 
    color: #212121;
-   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+/*logo*/
 
 .logo {
     color: #000000;
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2 px;
+
 }
 
 .logo-second {
     color: #2196F3;
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2px;
+
+/* identical to box height */
+
+letter-spacing: 0.03em;
 }
 
   ul {
@@ -39,11 +36,21 @@
 
 .site-nav a {
     color: #212121;
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14px;
+    letter-spacing: 0.02em;
 }
 
 .site-nav .link:hover, 
 .site-nav .link:focus {
     color: green;
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14px;
+    letter-spacing: 0.02em;
 }
 
 .specification a {
@@ -52,27 +59,47 @@
 
 .auth-nav-tel a {
     color: #757575;
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14px;
+    letter-spacing: 0.02em;
 }
 
 /*Портфолио*/
 
 .filter a {
     color: #212121;
+
 }
 
 .filter .link:focus, 
 .filter .link:hover{
     color: green;
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62px;
+    text-align: center;
+    letter-spacing: 0.03em;
 }
 
 /*works*/
 
 .list-works .title {
     color: #212121;
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 36px;
 }
 
 .list-works .paragraph {
     color: #757575;
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
 }
 
 /*button*/
@@ -80,4 +107,28 @@
 .button {
     color: #FFFFFF;
     background-color: #2196F3;
+    text-align: center;
+    letter-spacing: 0.03em;
+    
+}
+
+/*footer*/
+
+.footer {
+    background-color: #2F303A;
+}
+
+.address {
+    color: #FFFFFF;
+    font-family: 'Roboto';
+    font-size: 14px;
+    line-height: 24px;
+}
+
+.footer .link {
+    color: rgba(255, 255, 255, 0.6);
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
 }
