--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@
     color: var(--primary-tex-color);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     letter-spacing: 0.03em;
-    font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
 }
@@ -139,7 +138,6 @@ ul {
 /* Team */
 
 .team p {
-   font-weight: 400;
    font-size: 16px;
    line-height: 1.8;
    text-align: center;
@@ -178,6 +176,16 @@ ul {
     
 }
 
+.link.secondary {
+    background: #F5F4FA;
+    border-radius: 4px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    cursor: pointer;
+}
+
 /* Footer */
 
 .footer {
@@ -187,7 +195,6 @@ ul {
 
 .address {
     color: var(--white-color);
-    font-weight: 400;
     text-decoration: none;
 }
     
@@ -198,11 +205,38 @@ ul {
 
 .contacts {
     color: rgba(255, 255, 255, 0.6);
-    font-weight: 400;
     text-decoration: none;
 }
 
 .contacts:hover,
 .contacts:focus {
     color: var(--accent-color);
+}
+
+/* Portfolio */
+
+.button.primary.portfolio {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  cursor: pointer;
+}
+
+/* Work */
+
+.work-list {
+    color: var(--title-tex-color);
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+}
+
+.work-text {
+    color: var(--primary-tex-color);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 2;
+    letter-spacing: 0.03em;
 }
