--- a/css/style.css
+++ b/css/style.css
@@ -1,203 +1,190 @@
 :root {
-    lang="en";
-    --primary-tex-color: rgba(117, 117, 117, 1);
-    --title-tex-color: #212121;
-    --accent-color: #2196F3;
-    --white-color: #FFFFFF; 
-} 
- 
-.page {
-    background-color: #F5F5F5;
-    color: var(--primary-tex-color);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    letter-spacing: 0.03em;
-    font-size: 14px;
-    line-height: 1.71;
+  --primary-tex-color: #757575;
+  --title-tex-color: #212121;
+  --accent-color: #2196f3;
+  --white-color: #ffffff;
 }
 
+.page {
+  background-color: #ffffff;
+  color: var(--primary-tex-color);
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 0.03em;
+  font-size: 14px;
+  line-height: 1.71;
+}
 
 .logo {
-    color: rgba(0, 0, 0, 1);
-    font-family: 'Raleway';
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    text-decoration: none;
+  color: rgba(0, 0, 0, 1);
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  text-decoration: none;
 }
 
 .logo:hover {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .logoaccent {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
-
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 /* Site-nav */
 
 .site-nav .link.current {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .site-nav .link {
-    color: rgba(33, 33, 33, 1);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    text-decoration: none;
+  color: rgba(33, 33, 33, 1);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
 
 .site-nav .link:hover,
 .site-nav .link:focus {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 /* Auth-nav */
 
 .auth-nav.list {
-   font-family: 'Roboto';
-   font-style: normal;
-   font-weight: 500;
-   font-size: 14px;
-   line-height: 1.14;
-   letter-spacing: 0.02em;
-}
-.post {
-    color: var(--title-tex-color);
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
-.post:hover,
-.post:focus {
-    color: var(--accent-color);
+.contacts-link {
+  color: #757575;
 }
 
-.tel {
-    color: var(--primary-tex-color);
-}
-
-.tel:hover,
-.tel:focus {
-    color: var(--accent-color);
+.contacts-link:hover,
+.contacts-link:focus {
+  color: var(--accent-color);
 }
 
 /* Hero */
 
 .main-hero {
-    background-color: rgba(47, 48, 58, 1); 
+  background-color: rgba(47, 48, 58, 1);
 }
 
 .hero {
-    color: var(--white-color);
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
+  color: var(--white-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 
 /* Feautures */
 
 .features-title {
-    color: rgba(33, 33, 33, 1);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-transform: uppercase;
+  color: rgba(33, 33, 33, 1);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
 
 /* Example */
 
 .sphere-title {
-    color: var(--title-tex-color);
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
+  color: var(--title-tex-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
 }
 
 /* Team */
 
 .team p {
-   font-size: 16px;
-   line-height: 1.8;
-   text-align: center;
-   
+  font-size: 16px;
+  line-height: 1.8;
+  text-align: center;
 }
 
 .team-title {
-    color: var(--title-tex-color);
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
+  color: var(--title-tex-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
 }
 
 .team-list {
-    color: var(--title-tex-color);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.18;
-    text-align: center;
+  color: var(--title-tex-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
 }
 
 /* Button */
 
 .button.primary {
-    color: var(--white-color);
-    background-color: var(--accent-color);
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.85;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.06em;
-    cursor: pointer;
-    
+  color: var(--white-color);
+  background-color: var(--accent-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.85;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  cursor: pointer;
 }
 
 .link.secondary {
-    background: #F5F4FA;
-    border-radius: 4px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    text-align: center;
-    cursor: pointer;
+  background: #f5f4fa;
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  cursor: pointer;
 }
 
 /* Footer */
 
 .footer {
-    background-color: #2F303A
-;
+  background-color: #2f303a;
 }
 
 .address {
-    color: var(--white-color);
-    text-decoration: none;
+  font-style: normal;
+  color: var(--white-color);
+  text-decoration: none;
 }
-    
+
 .address:hover,
 .address:focus {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .contacts {
-    color: rgba(255, 255, 255, 0.6);
-    text-decoration: none;
+  color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
 }
 
 .contacts:hover,
 .contacts:focus {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 /* Portfolio */
@@ -212,23 +199,23 @@ ul {
 
 .link.secondary:hover,
 .link.secondary:focus {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 /* Work */
 
 .work-list {
-    color: var(--title-tex-color);
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+  color: var(--title-tex-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 }
 
 .work-text {
-    color: var(--primary-tex-color);
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 2;
-    letter-spacing: 0.03em;
+  color: var(--primary-tex-color);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 2;
+  letter-spacing: 0.03em;
 }
