--- a/css/style.css
+++ b/css/style.css
@@ -133,8 +133,7 @@ ul {
 
 /* Team */
 
-.team p {
-  font-size: 16px;
+.team-text {
   line-height: 1.8;
   text-align: center;
 }
@@ -149,7 +148,6 @@ ul {
 .team-list {
   color: var(--title-tex-color);
   font-weight: 500;
-  font-size: 16px;
   line-height: 1.18;
   text-align: center;
 }
@@ -160,7 +158,6 @@ ul {
   color: var(--white-color);
   background-color: var(--accent-color);
   font-weight: 700;
-  font-size: 16px;
   line-height: 1.85;
   letter-spacing: 0.06em;
   cursor: pointer;
@@ -229,7 +226,6 @@ ul {
 .button-primary {
   background-color: #f5f4fa;
   font-weight: 500;
-  font-size: 16px;
   line-height: 1.62;
   text-align: center;
   cursor: pointer;
@@ -255,7 +251,6 @@ ul {
 
 .work-text {
   color: var(--primary-tex-color);
-  font-size: 16px;
   line-height: 2;
   letter-spacing: 0.03em;
 }
